add input KRS
